Добавление секции "Лучшее для своих".

--- a/index.html
+++ b/index.html
@@ -91,10 +91,71 @@
 
       <main>
         <section class="main_screen">
-          <img class="main_img" src="./assets/images/main_screen_img.png" alt="Изображение главного экрана">
-          <div class="breadcrumbs">
-            <p class="breadcrumbs--text"><span>Главная</span> <span>></span> <span>Акции</span> <span>></span> <span>Лучшее для своих</span></p>
+
+          <div class="promotion-col">
+
+            <div class="breadcrumbs">
+              <p class="breadcrumbs--text"><span>Главная</span> <span>></span> <span>Акции</span> <span>></span> <span>Лучшее для своих</span></p>
+            </div>
+
+            <div class="promotion__text">
+              <h2 class="promotion__text--caption">Акция <span  class="promotion__text--caption--desctop">“Лучшее для своих”</span>  <span class="promotion__text--caption--adaptive">«Лучшее для своих»</span></h2>
+              <p class="promotion__text--desc">Получите бесплатное <span>ТО при покупке нового Taos</span></p>
+            </div>
+
+            <img class="image-col--image image-col--image--adaptive" src="./assets/images/main_screen_image.png" alt="Изображение автомобиля">
+
+            <div class="promotion__footer">
+
+              <div class="promotion__footer--deadline">
+                <p class="promotion__footer--deadline_text">срок акции</p>
+                <span class="promotion__footer--deadline_since">с <span>01.01.2024</span></span>
+                <span class="promotion__footer--deadline_to">по <span>01.03.2024</span></span>
+              </div>
+
+              <div class="promotion__footer--timer">
+                <p class="promotion__footer--timer_text">до завершения</p>
+
+                <div class="promotion__footer--timer_time">
+
+                  <div class="promotion__timer_time--count">
+                    <span class="promotion__timer_time--count_number">27</span>
+                    <p class="promotion__timer_time--count_text">дней</p>
+                  </div>
+
+                  <span class="promotion__timer_time--separator">:</span>
+
+                  <div class="promotion__timer_time--count">
+                    <span class="promotion__timer_time--count_number">02</span>
+                    <p class="promotion__timer_time--count_text">часов</p>
+                  </div>
+
+                  <span class="promotion__timer_time--separator">:</span>
+
+                  <div class="promotion__timer_time--count">
+                    <span class="promotion__timer_time--count_number">34</span>
+                    <p class="promotion__timer_time--count_text">минут</p>
+                  </div>
+
+                  <span class="promotion__timer_time--separator">:</span>
+
+                  <div class="promotion__timer_time--count">
+                    <span class="promotion__timer_time--count_number">08</span>
+                    <p class="promotion__timer_time--count_text">секунд</p>
+                  </div>
+
+                </div>
+
+              </div>
+
+            </div>
+
           </div>
+
+          <div class="image-col">
+            <img class="image-col--image" src="./assets/images/main_screen_image.png" alt="Изображение автомобиля">
+          </div>
+
         </section>
 
         <section class="leave_request">
