Добавлена секция об условиях розыгрыша.

--- a/index.html
+++ b/index.html
@@ -158,6 +158,39 @@
 
         </section>
 
+        <section class="promotion_info">
+
+          <div class="promotion_info__item">
+            <h4 class="promotion_info__item--caption">Условия участия</h4>
+
+            <div class="promotion_info__item--desc">
+              <p class="promotion_info__item--desc_text">Вы приобретаете новый Volkswagen Taos в нашем дилерском центре</p>
+              <p class="promotion_info__item--desc_text">Акция действует только на комплектации Status, JOY! и Exclusive</p>
+            </div>
+
+          </div>
+
+          <div class="promotion_info__item">
+            <h4 class="promotion_info__item--caption">Выгода акции</h4>
+
+            <div class="promotion_info__item--desc">
+              <p class="promotion_info__item--desc_text">Вы получаете бесплатное ТО обслуживание любой машины Volkswagen</p>
+            </div>
+
+          </div>
+
+          <div class="promotion_info__item">
+            <h4 class="promotion_info__item--caption">Информация про ТО</h4>
+
+            <div class="promotion_info__item--desc">
+              <p class="promotion_info__item--desc_text">Автомобили в возрасте до четырёх лет освобождаются от прохождения техосмотра. Чтобы купить полис ОСАГО, диагностическая карта не нужна.</p>
+              <p class="promotion_info__item--desc_text">Техосмотр легковых авто от четырёх до десяти лет проводится один раз в два года. Если транспорт старше десяти лет, процедуру повторяют ежегодно.</p>
+            </div>
+
+          </div>
+
+        </section>
+
         <section class="leave_request">
           <div class="services_form">
             <h3 class="services_form--caption">Оставьте заявку</h3>
